--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="public/assets/css/style.css">
     <title>projet-nft</title>
 </head>
@@ -13,8 +14,14 @@
            <button class="btn btn-outline-purple">Catégories</button> 
         </div>
         <div class="col-6 col-md-4">
-           <button class="btn btn-outline-purple">Classé par</button> 
+           <button class="btn btn-outline-light-purple">Classé par</button> 
         </div>
+    </div>
+    <div class="col-12 bg-warning">
+        <p class="text-light-purple">
+            Essaye de changer ma couleur de fond
+        </p>
+
     </div>
 </body>
 </html>
