--- a/nft_infos.html
+++ b/nft_infos.html
@@ -8,13 +8,8 @@
     <title>projet-nft</title>
 </head>
 <body>
-    <div class="row justify-content-center">
-        <div class="col-6 col-md-4">
-           <button class="btn btn-outline-purple">Catégories</button> 
-        </div>
-        <div class="col-6 col-md-4">
-           <button class="btn btn-outline-purple">Classé par</button> 
-        </div>
-    </div>
+    <main id="ntf_infos-main">
+        
+    </main>
 </body>
 </html>
