Modification meta description

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nom de marque à trouver est la plus grande plateforme de NFTs destinée aux étudiants. Chaque création authentique s'intègre à l'art de l'Ethereum dont l'œuvre peut s'acquérir via notre marketplace digitale. Les artistes nous font déja confiance et bientôt vous aussi">
+    <meta name="description" content="Lobos est la plus grande plateforme de NFTs destinée aux étudiants. Chaque création authentique s'intègre à l'art de l'Ethereum dont l'œuvre peut s'acquérir via notre marketplace digitale. Les artistes nous font déja confiance et bientôt vous aussi">
     
     <!-- STYLES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
