inscription faite. Export ne marche pas

--- a/login.html
+++ b/login.html
@@ -11,15 +11,16 @@
       <main class="user-form container-fluid">
 
         <!-- two part container -->
-        <div class="row ">
+        <div class="row">
           <!-- image container -->
-          <aside class="user_form_bg col-md-6 ps-0">
+          <aside class="user_form_bg d-none d-sm-block col-sm-5 col-md-6 ps-0">
           </aside>
 
-          <!-- form container -->
-          <form action="" method="post" class="col-md-6">
+          <!-- connexion form -->
+          <form action="" method="post" class="col-sm-7 col-md-6 my-sm-5 my-lg-0">
             <div class="row flex-center h-100"> 
-              <div class="col-md-7">
+              <div class="ccol-12 col-md-11 col-lg-11 col-xl-9 col-xxl-7">
+                <!-- input container --> 
                 <div class="row flex-column flex-center gap-4">
                   <!-- form title -->
                   <h2 class="fw-bold text-center">Connexion à votre espace</h2>
