Ajout responsive ipad

--- a/home.html
+++ b/home.html
@@ -5,24 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- style files -->
     <link rel="stylesheet" href="public/assets/css/style.css">
     <title>Homepage</title>
 </head>
 
 <body class="font-style">
-    <!-- ----------NAVBAR N°2------------- -->
-
+      <!--            Section : Navbar            -->
     <div class="container pt-2 pb-4">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <!-- <div class="col-12 col-md-4"> -->
                 <a class="navbar-brand fw-bold" href="#"><img src="public/assets/img/logo.svg" alt="Logo"> Lobos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            <!-- </div> -->
-           
-            <!-- <div class="col-8"> -->
+            
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
                         <li class="nav-item">
@@ -45,9 +40,9 @@
                             </li>                                                                
                     </div>
                 </div>
-            <!-- </div>   -->
         </nav>
     </div> 
+    <!--            Fin section : Footer            -->
 
     <!--            Section : Header            -->
     <div class="container section-header pt-5">
@@ -68,7 +63,7 @@
     <!--            Fin section : Header            -->
 
     <!--            Section : Explication du concept            -->
-    <div class="section-explanations py-5 spacing">
+    <div class="section-explanations py-5 px-lg-0 px-3 spacing">
         <div class="container">
             <div class="row pb-5">
                 <h2 class="heading-2 pb-3">Créez et vendez vos NFTs en toute simplicité</h2>
@@ -96,9 +91,9 @@
                             </svg>
                         </div>
                         <div class="row">
-                            <h3 class="heading-3">Installez votre wallet</h3>
+                            <h4 class="heading-4">Installez votre wallet</h4>
                         </div>
-                        <div class="row px-lg-5">
+                        <div class="row px-md-5 px-lg-5">
                             <p>Une fois que vous avez installé le wallet de votre choix, connectez-le à Logoipsum en
                                 cliquant sur “ajouter à mon wallet”
                             </p>
@@ -124,11 +119,13 @@
 
                         </div>
                         <div class="row">
-                            <h3 class="heading-3">Créez votre collection</h3>
+                            <h4 class="heading-4">Créez votre collection</h4>
                         </div>
-                        <div class="row px-lg-5">
+                        <div class="row px-md-5 px-lg-5"
+                        ><p>
                             Créer votre collection en cliquant sur “Créer ma collection”. Configurez ensuite votre
                             profil en quelques clics
+                        </p>
                         </div>
                     </div>
                     <div class="d-flex flex-column mt-5 mt-lg-0">
@@ -154,9 +151,9 @@
                             </svg>
                         </div>
                         <div class="row ">
-                            <h3 class="heading-3">Ajoutez vos NFTs</h3>
+                            <h4 class="heading-4">Ajoutez vos NFTs</h3>
                         </div>
-                        <div class="row px-lg-5">
+                        <div class="row px-md-5 px-lg-5">
                             <p>Téléchargez votre travail, puis ajoutez les informations de votre NFT. Et c’est fait
                                 ! Votre travail est désormais disponible à l’achat.</p>
                         </div>
@@ -173,13 +170,13 @@
     </div>
     <div class="container card-trending mt-4">
         <div class="row">
-            <div class="col-lg-4 col-12">
+            <div class="col-12 col-md-6 col-lg-4">
                 <div class="card card-radius">
                     <img src="public/assets/img/moonbirds-nft.png" class="card-img-top img-radius" alt="NFT">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-8">
-                                <h3 class="heading-3-bold card-title">#2734</h3>
+                                <h3 class="heading-3 bold card-title">#2734</h3>
                                 <div class="d-flex align-items-center">
                                     <p class="card-text my-2 pe-2">Moonbirds</p>
                                     <img src="/public/assets/img/verify.svg" alt="">
@@ -194,7 +191,7 @@
                             <div class="col-6">
                                 <div class="d-flex">
                                     <img src="public/assets/img/weth.svg" alt="icone ethereum">
-                                    <h3 class="heading-3-bold m-2">20.5</h3>
+                                    <h3 class="heading-3 bold m-2">20.5</h3>
                                 </div>
                                 <p class="mb-0">2 jours restants</p>
                             </div>
@@ -207,13 +204,13 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-12 mt-4 mt-lg-0">
+            <div class="col-12 col-lg-4 col-md-6 mt-4 mt-md-0 mt-lg-0">
                 <div class="card card-radius">
                     <img src="public/assets/img/los-muertos-nft.png" class="card-img-top img-radius" alt="NFT">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-8">
-                                <h3 class="heading-3-bold card-title">#5608</h3>
+                                <h3 class="heading-3 bold card-title">#5608</h3>
                                 <div class="d-flex align-items-center">
                                     <p class="card-text my-2 pe-2">Los Muertos</p>
                                     <img src="/public/assets/img/verify.svg" alt="">
@@ -228,7 +225,7 @@
                             <div class="col-6">
                                 <div class="d-flex">
                                     <img src="public/assets/img/eth.svg" alt="icone ethereum">
-                                    <h3 class="heading-3-bold m-2">0.45</h3>
+                                    <h3 class="heading-3 bold m-2">0.45</h3>
                                 </div>
                                 <p class="mb-0">2 jours restants</p>
                             </div>
@@ -241,13 +238,13 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-12 mt-4 mt-lg-0">
+            <div class="col-12 col-lg-4 d-md-none d-block d-lg-block mt-4 mt-lg-0">
                 <div class="card card-radius">
                     <img src="public/assets/img/dtp-nft.png" class="card-img-top img-radius" alt="NFT">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-9">
-                                <h3 class="heading-3-bold card-title">#1834</h3>
+                                <h3 class="heading-3 bold card-title">#1834</h3>
                                 <div class="d-flex align-items-center">
                                     <p class="card-text my-2 pe-2">Degenerate Trash Pandas</p>
                                     <img src="/public/assets/img/verify.svg" alt="">
@@ -262,7 +259,7 @@
                             <div class="col-6">
                                 <div class="d-flex">
                                     <img src="public/assets/img/sol.svg" alt="icone ethereum">
-                                    <h3 class="heading-3-bold m-2">26.69</h3>
+                                    <h3 class="heading-3 bold m-2">26.69</h3>
                                 </div>
                                 <p class="mb-0">2 jours restants</p>
                             </div>
@@ -288,17 +285,17 @@
         </a>
 
         <a href="" class="d-block element-2 d-flex flex-column-reverse">
-            <h3 class="heading-3-bold text-white m-0 p-3">Metavers</h3>
+            <h3 class="heading-3 bold text-white m-0 p-3">Metavers</h3>
         </a>
         <a href="" class="d-block element-3 d-flex flex-column-reverse">
-            <h3 class="heading-3-bold text-white m-0 p-3">Photographie</h3>
+            <h3 class="heading-3 bold text-white m-0 p-3">Photographie</h3>
 
         </a>
         <a href="" class="d-block element-4 d-flex flex-column-reverse">
-            <h3 class="heading-3-bold text-white m-0 p-3">Musique</h3>
+            <h3 class="heading-3 bold text-white m-0 p-3">Musique</h3>
         </a>
         <a href="" class="d-block element-5 d-flex flex-column-reverse">
-            <h3 class="heading-3-bold text-white m-0 p-3">Sport</h3>
+            <h3 class="heading-3 bold text-white m-0 p-3">Sport</h3>
         </a>
     </div>
     <!--            Fin section : Listing de catégories            -->
@@ -310,11 +307,11 @@
                 <h2 class="preFooterManagement__title">Explorer la galerie</h2>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <p>Découvrez plus de 1M de NFTs de tous
-                    horizons</p>
+                <h4 class="heading-4 text-center py-2">Découvrez plus de 1M de NFTs de tous
+                    horizons</h4>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <button type="button" class="btn btn-gradient me-2">Explorer le
+                <button type="button" class="btn btn-gradient mt-2">Explorer le
                     marketplace</button>
             </div>
         </div>
@@ -325,7 +322,7 @@
                     métiers du numérique, La Manu.</p>
             </div>
             <div class="col-12 d-flex justify-content-center align-items-center">
-                <p class="footerManagement__paragrpah footerManagement__paragrpah--bold">Réalisé
+                <p class="semibold">Réalisé
                     par Lucile, Wesley,
                     Clara</p>
             </div>
